# COMMOT-rust

./: Cargo.toml  README.md  commot_implementation_reference.md
commot-cli/: Cargo.toml
commot-cli/src/: main.rs
commot-core/: Cargo.toml
commot-core/benches/: cot_bench.rs
commot-core/src/: cot.rs  io.rs  lib.rs  pipeline.rs  sparse.rs  unot.rs
commot-core/src/gpu/: distance.rs  mod.rs
commot-core/src/gpu/shaders/: pairwise_distance.wgsl
commot-core/tests/: gpu_distance.rs  parity.rs  sparse_pull.rs  streaming_parity.rs  wass_probe.rs
tests/fixtures/: mock_adata.h5ad  mock_sidecar.json
tests/fixtures/parity/: A.npy  D.npy  M.npy  P_0_0.npy  P_0_1.npy  P_1_1.npy  S.npy  meta.json
