[package]
name = "commot-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "commot-cli"
path = "src/main.rs"

[features]
default = []
pprof = ["dep:pprof"]
gpu = ["commot-core/gpu"]

[dependencies]
commot-core = { path = "../commot-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pprof = { version = "0.15", optional = true, features = ["flamegraph"] }
