[package]
name = "commot-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
ndarray = "0.16"
rayon = "1.10"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hdf5-metno = "0.12.4"
ndarray-npy = "0.9"
wgpu = { version = "29.0.1", optional = true }
pollster = { version = "0.4.0", optional = true }
bytemuck = { version = "1.25.0", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
wass = "0.1.5"
serde_json = "1"

[[bench]]
name = "cot_bench"
harness = false

[[test]]
name = "gpu_distance"
path = "tests/gpu_distance.rs"
required-features = ["gpu"]

[features]
default = []
gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]
